--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EJERCICIO 5</title>
     <script src="ej5.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <body class="cuerpo-ej3">
         <div class="container">
             <label for="mt">
-                <h1>SPORCENTAJE DE HOMBRES Y MUJERES</h1>
+                <h1>PORCENTAJE DE HOMBRES Y MUJERES</h1>
             </label>
             <br>
 
